# auto-trade-system

./: .claude_context.md  .env.backup.20260515_032926  .env.conservative.20260517_223259  .env.example  .gitignore  .risk_state.json  ADMIN_API_KEY_SECURITY_HARDENING.md  ALiVMassit_API_Optimization_Plan.docx  APPLICATION_STARTUP_SUCCESS.md  BINANCE_DEMO_CONFIGURATION.md  BINANCE_TESTNET_INTEGRATION.md  BYBIT_API_ACCESS_CHECK.md  BYBIT_API_VALIDATION_REPORT.md  BYBIT_CONFIGURATION_FINAL_SUMMARY.md  BYBIT_DEMO_ACCOUNT_SETUP.md  BYBIT_DEMO_CLEANUP_RESTART_GUIDE.md  BYBIT_DEMO_ENHANCEMENTS.md  BYBIT_DEMO_FIX_RESOLUTION.md  BYBIT_DEMO_KEYS_INVALID.md  BYBIT_DEMO_QUICKREF.md  BYBIT_DEMO_STATUS_REPORT_2026-05-13.md  BYBIT_DEMO_TO_LIVE_TRANSITION_PLAN.md  BYBIT_DEMO_TRADING_CONFIGURATION.md  BYBIT_DEMO_VALIDATION_COMPLETE.md  BYBIT_DEMO_VALIDATION_FINAL_STATUS.md  BYBIT_DEMO_VALIDATION_REPORT.md  BYBIT_ENHANCEMENT_SUMMARY.md  BYBIT_INTEGRATION_FINAL_SUMMARY.md  BYBIT_LATEST_STATUS_CHECK.md  BYBIT_LIVE_API_VALIDATION_REPORT.md  BYBIT_LIVE_API_VERIFICATION.md  BYBIT_LIVE_TRADING_VALIDATION_PLAN_GOLD_BOT_V2.md  BYBIT_PYBIT_MIGRATION_STATUS.md  BYBIT_PYBIT_SDK_COMPARISON.md  BYBIT_PYBIT_SDK_FIX.md  BYBIT_PYBIT_VALIDATION_REPORT.md  BYBIT_QUICK_REFERENCE.md  BYBIT_QUICK_REFERENCE_FINAL.md  BYBIT_RESTRICTION_ANALYSIS.md  BYBIT_SKILLS_UPGRADE_REPORT.md  (+314 more)
app/: config.py  heartbeat_monitor.py  logging_config.py  main.py  main_backup_20260514.py  worker_gold_bot.py
data/: learning_params.json  vmassit.db-shm  vmassit.db-wal
docs/: CURRENT_STATUS_VS_PLAN.md  IMPLEMENTATION_STATUS_V3.md  (+6 more)
(+447 files in other folders)
